dev模式下的动态编译模板改用gulp-html-import方式，放弃用gulp-file-include可实现子模板修改动态响应，之前不可以

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "autoprefixer": "^7.2.3",
+    "gulp-html-import": "^0.0.2",
     "gulp-postcss": "^7.0.0",
     "gulp-requirejs-optimize": "^1.2.0",
     "gulp-sourcemaps": "^2.6.1",
